Enable running the pre-commit checks on pre-commit CI which do not require system Python

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,126 +2,146 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-    -   id: check-added-large-files
-    -   id: check-case-conflict
-    -   id: check-executables-have-shebangs
-    -   id: check-merge-conflict
-    -   id: check-shebang-scripts-are-executable
-    -   id: check-symlinks
-    -   id: check-toml
-    -   id: check-vcs-permalinks
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: file-contents-sorter
-        files: spelling_private_dict\.txt$
-    -   id: trailing-whitespace
--   repo: local
-    hooks:
-    -   id: actionlint
-        name: actionlint
-        entry: actionlint
-        language: system
-        pass_filenames: false
-        types_or: [yaml]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.6.0
+  hooks:
+  - id: check-added-large-files
+  - id: check-case-conflict
+  - id: check-executables-have-shebangs
+  - id: check-merge-conflict
+  - id: check-shebang-scripts-are-executable
+  - id: check-symlinks
+  - id: check-toml
+  - id: check-vcs-permalinks
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: file-contents-sorter
+    files: spelling_private_dict\.txt$
+  - id: trailing-whitespace
+- repo: local
+  hooks:
+  - id: actionlint
+    name: actionlint
+    entry: actionlint
+    language: system
+    pass_filenames: false
+    types_or: [yaml]
 
-    -   id: mypy
-        name: mypy
-        stages: [push]
-        entry: mypy .
-        language: system
-        types_or: [python, toml]
-        pass_filenames: false
+  - id: mypy
+    name: mypy
+    stages: [push]
+    entry: mypy .
+    language: system
+    types_or: [python, toml]
+    pass_filenames: false
 
-    -   id: check-manifest
-        name: check-manifest
-        stages: [push]
-        entry: check-manifest .
-        language: system
-        pass_filenames: false
+  - id: check-manifest
+    name: check-manifest
+    stages: [push]
+    entry: check-manifest .
+    language: system
+    pass_filenames: false
 
-    -   id: pyright
-        name: pyright
-        stages: [push]
-        entry: pyright .
-        language: system
-        types_or: [python, toml]
-        pass_filenames: false
+  - id: pyright
+    name: pyright
+    stages: [push]
+    entry: pyright .
+    language: system
+    types_or: [python, toml]
+    pass_filenames: false
 
-    -   id: vulture
-        name: vulture
-        entry: vulture --min-confidence 100 --exclude .eggs
-        language: system
-        types_or: [python]
+  - id: vulture
+    name: vulture
+    entry: vulture --min-confidence 100 --exclude .eggs
+    language: system
+    types_or: [python]
 
-    -   id: pyroma
-        name: pyroma
-        entry: pyroma --min 10 .
-        language: system
-        pass_filenames: false
-        types_or: [toml]
+  - id: pyroma
+    name: pyroma
+    entry: pyroma --min 10 .
+    language: system
+    pass_filenames: false
+    types_or: [toml]
 
-    -   id: deptry
-        name: deptry
-        entry: deptry src/
-        language: system
-        pass_filenames: false
+  - id: deptry
+    name: deptry
+    entry: deptry src/
+    language: system
+    pass_filenames: false
 
-    -   id: pylint
-        name: pylint
-        entry: pylint src/ tests/
-        language: system
-        stages: [manual]
-        pass_filenames: false
+  - id: pylint
+    name: pylint
+    entry: pylint src/ tests/
+    language: system
+    stages: [manual]
+    pass_filenames: false
 
-    -   id: ruff-check
-        name: Ruff check
-        entry: ruff check
-        language: system
-        types_or: [python]
+  - id: ruff-check
+    name: Ruff check
+    entry: ruff check
+    language: system
+    types_or: [python]
 
-    -   id: ruff-format-check
-        name: Ruff format check
-        entry: ruff format --check
-        language: system
-        types_or: [python]
+  - id: ruff-format-check
+    name: Ruff format check
+    entry: ruff format --check
+    language: system
+    types_or: [python]
 
-    -   id: ruff-check-fix
-        name: Ruff check fix
-        entry: ruff check --fix
-        language: system
-        types_or: [python]
+  - id: ruff-check-fix
+    name: Ruff check fix
+    entry: ruff check --fix
+    language: system
+    types_or: [python]
 
-    -   id: ruff-format-fix
-        name: Ruff format
-        entry: ruff format
-        language: system
-        types_or: [python]
+  - id: ruff-format-fix
+    name: Ruff format
+    entry: ruff format
+    language: system
+    types_or: [python]
 
-    -   id: doc8
-        name: doc8
-        entry: doc8
-        language: system
-        types_or: [rst]
+  - id: doc8
+    name: doc8
+    entry: doc8
+    language: system
+    types_or: [rst]
 
-    -   id: interrogate
-        name: interrogate
-        entry: interrogate
-        language: system
-        types_or: [python]
+  - id: interrogate
+    name: interrogate
+    entry: interrogate
+    language: system
+    types_or: [python]
 
-    -   id: pyproject-fmt-check
-        name: pyproject-fmt check
-        entry: pyproject-fmt --check
-        language: system
-        types_or: [toml]
-        files: pyproject.toml
+  - id: pyproject-fmt-check
+    name: pyproject-fmt check
+    entry: pyproject-fmt --check
+    language: system
+    types_or: [toml]
+    files: pyproject.toml
 
-    -   id: pyproject-fmt-fix
-        name: pyproject-fmt
-        entry: pyproject-fmt
-        language: system
-        types_or: [toml]
-        files: pyproject.toml
+  - id: pyproject-fmt-fix
+    name: pyproject-fmt
+    entry: pyproject-fmt
+    language: system
+    types_or: [toml]
+    files: pyproject.toml
+# We use system Python, with required dependencies specified in pyproject.toml.
+# We therefore cannot use those dependencies in pre-commit CI.
+ci:
+  skip:
+  - actionlint
+  - mypy
+  - check-manifest
+  - pyright
+  - vulture
+  - pyroma
+  - deptry
+  - pylint
+  - ruff-check
+  - ruff-format-check
+  - ruff-check-fix
+  - ruff-format-fix
+  - doc8
+  - interrogate
+  - pyproject-fmt-check
+  - pyproject-fmt-fix
