--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,9 +56,11 @@ optional-dependencies.dev = [
     "pytest==8.3.2",
     "pytest-cov==5.0.0",
     "ruff==0.6.1",
-    "sphinx[test]==8.0.2",             # We use `sphinx.testing`.
+    "sphinx[test]==8.0.2",
+    # We use `sphinx.testing`.
     "types-docutils==0.21.0.20240724",
     "vulture==2.11",
+    "typeguard==4.3.0",
 ]
 urls.Source = "https://github.com/adamtheturtle/sphinx-substitution-extensions"
 
@@ -263,6 +265,9 @@ keep_full_version = true
 
 xfail_strict = true
 log_cli = true
+typeguard-packages = """
+tests
+"""
 
 [tool.coverage.run]
 
