--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
 ]
 optional-dependencies.dev = [
     "actionlint-py==1.7.1.15",
+    "beartype==0.18.5",
     "check-manifest==0.49",
     "deptry==0.20.0",
     "doc8==1.1.1",
@@ -58,7 +59,6 @@ optional-dependencies.dev = [
     "ruff==0.6.2",
     # We use `sphinx.testing`.
     "sphinx[test]==8.0.2",
-    "typeguard==4.3.0",
     "types-docutils==0.21.0.20240724",
     "vulture==2.11",
 ]
@@ -265,9 +265,6 @@ keep_full_version = true
 
 xfail_strict = true
 log_cli = true
-typeguard-packages = """
-tests
-"""
 
 [tool.coverage.run]
 
