--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,12 @@ dynamic = [
     "version",
 ]
 dependencies = [
+    "beartype",
     "docutils>=0.19",
     "sphinx>=7.3.5",
 ]
 optional-dependencies.dev = [
     "actionlint-py==1.7.1.15",
-    "beartype==0.18.5",
     "check-manifest==0.49",
     "deptry==0.20.0",
     "doc8==1.1.1",
