Require more modern beartype

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "beartype",
+    "beartype>=0.18.5",
     "docutils>=0.19",
     "sphinx>=7.3.5",
 ]
