Show ruff format diff if there are issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -138,7 +138,7 @@ ci:
   - deptry
   - pylint
   - ruff-check
-  - ruff-format-check
+  - ruff-format-diff
   - ruff-check-fix
   - ruff-format-fix
   - doc8
