Specify Python module use in pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
   hooks:
   - id: actionlint
     name: actionlint
-    entry: actionlint
+    entry: python -m actionlint
     language: system
     pass_filenames: false
     types_or: [yaml]
@@ -35,7 +35,7 @@ repos:
   - id: mypy
     name: mypy
     stages: [push]
-    entry: mypy .
+    entry: python -m mypy .
     language: system
     types_or: [python, toml]
     pass_filenames: false
@@ -43,90 +43,90 @@ repos:
   - id: check-manifest
     name: check-manifest
     stages: [push]
-    entry: check-manifest .
+    entry: python -m check-manifest .
     language: system
     pass_filenames: false
 
   - id: pyright
     name: pyright
     stages: [push]
-    entry: pyright .
+    entry: python -m pyright .
     language: system
     types_or: [python, toml]
     pass_filenames: false
 
   - id: vulture
     name: vulture
-    entry: vulture --min-confidence 100 --exclude .eggs
+    entry: python -m vulture --min-confidence 100 --exclude .eggs
     language: system
     types_or: [python]
 
   - id: pyroma
     name: pyroma
-    entry: pyroma --min 10 .
+    entry: python -m pyroma --min 10 .
     language: system
     pass_filenames: false
     types_or: [toml]
 
   - id: deptry
     name: deptry
-    entry: deptry src/
+    entry: python -m deptry src/
     language: system
     pass_filenames: false
 
   - id: pylint
     name: pylint
-    entry: pylint src/ tests/
+    entry: python -m pylint src/ tests/
     language: system
     stages: [manual]
     pass_filenames: false
 
   - id: ruff-check
     name: Ruff check
-    entry: ruff check
+    entry: python -m ruff check
     language: system
     types_or: [python]
 
   - id: ruff-format-diff
     name: Ruff format diff
-    entry: ruff format --diff
+    entry: python -m ruff format --diff
     language: system
     types_or: [python]
 
   - id: ruff-check-fix
     name: Ruff check fix
-    entry: ruff check --fix
+    entry: python -m ruff check --fix
     language: system
     types_or: [python]
 
   - id: ruff-format-fix
     name: Ruff format
-    entry: ruff format
+    entry: python -m ruff format
     language: system
     types_or: [python]
 
   - id: doc8
     name: doc8
-    entry: doc8
+    entry: python -m doc8
     language: system
     types_or: [rst]
 
   - id: interrogate
     name: interrogate
-    entry: interrogate
+    entry: python -m interrogate
     language: system
     types_or: [python]
 
   - id: pyproject-fmt-check
     name: pyproject-fmt check
-    entry: pyproject-fmt --check
+    entry: python -m pyproject-fmt --check
     language: system
     types_or: [toml]
     files: pyproject.toml
 
   - id: pyproject-fmt-fix
     name: pyproject-fmt
-    entry: pyproject-fmt
+    entry: python -m pyproject-fmt
     language: system
     types_or: [toml]
     files: pyproject.toml
