--- a/pyproject.toml
+++ b/pyproject.toml
@@ -341,6 +341,7 @@ ignore_names = [
     "project_copyright",
     "pygments_style",
     "rst_prolog",
+    "setup",
     "source_suffix",
     "spelling_word_list_filename",
     "templates_path",
