Test shell snippets in documentation code blocks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,19 @@ repos:
     pass_filenames: false
     types_or: [yaml]
 
+  - id: shellcheck
+    name: shellcheck
+    entry: shellcheck --shell bash
+    language: system
+    pass_filenames: false
+    types_or: [shell]
+
+  - id: shellcheck-docs
+    name: shellcheck-docs
+    entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash"
+    language: system
+    types_or: [markdown, rst]
+
   - id: mypy
     name: mypy
     stages: [push]
@@ -171,5 +184,7 @@ ci:
   - ruff-check-fix-docs
   - ruff-format-fix
   - ruff-format-fix-docs
+  - shellcheck
+  - shellcheck-docs
   - vulture
   - vulture-docs
