--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ optional-dependencies.dev = [
     # but also because having it installed means that ``actionlint-py`` will
     # use it to lint shell commands in GitHub workflow files.
     "shellcheck-py==0.10.0.1",
+    "shfmt-py==3.7.0.1",
     # We use `sphinx.testing`.
     "sphinx[test]==8.0.2",
     "types-docutils==0.21.0.20241004",
