--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,24 +24,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: "Set up Python"
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      # We do not use the cache action as uv is faster than the cache action.
-      - name: "Install dependencies"
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv pip install --system --upgrade --editable .[dev]
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
           uv pip compile --resolution=${{ matrix.uv-resolution }} --no-deps pyproject.toml > resolved-requirements.txt
           uv pip install --system --requirement resolved-requirements.txt
 
       - name: "Lint"
-        run: |
-          pre-commit run --all-files --hook-stage commit --verbose
-          pre-commit run --all-files --hook-stage push --verbose
-          pre-commit run --all-files --hook-stage manual --verbose
+         run: |
+           uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage commit --verbose
+           uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage push --verbose
+           uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage manual --verbose
 
       - name: "Build sample"
         run: |
@@ -53,7 +45,7 @@ jobs:
 
       - name: "Run tests"
         run: |
-          pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
+          uv run --all-extras --python=${{ matrix.python-version }} pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
 
       - name: "Upload coverage to Codecov"
         uses: "codecov/codecov-action@v4"
