Move release dependencies to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ optional-dependencies.dev = [
     "types-docutils==0.21.0.20241004",
     "vulture==2.13",
 ]
+optional-dependencies.release = ["build", "check-wheel-contents"]
 urls.Source = "https://github.com/adamtheturtle/sphinx-substitution-extensions"
 
 [tool.setuptools]
