--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ optional-dependencies.dev = [
     "mypy==1.11.2",
     "myst-parser==4.0.0",
     "pre-commit==3.8.0",
-    "pyenchant==3.2.2",
+    "pyenchant==3.3.0rc1",
     "pylint==3.3.1",
     "pyproject-fmt==2.2.4",
     "pyright==1.1.383",
