--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,13 +33,13 @@ repos:
 
   - id: shellcheck
     name: shellcheck
-    entry: shellcheck --shell=bash --exclude=SC1017
+    entry: uv run --extra=dev shellcheck --shell=bash --exclude=SC1017
     language: python
     types_or: [shell]
 
   - id: shellcheck-docs
     name: shellcheck-docs
-    entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash --exclude=SC1017"
+    entry: uv run --extra=dev doccmd --language=shell --language=console --command="shellcheck --shell=bash --exclude=SC1017"
     language: python
     types_or: [markdown, rst]
 
@@ -51,14 +51,14 @@ repos:
 
   - id: shfmt-docs
     name: shfmt-docs
-    entry: doccmd --language=shell --language=console --skip-marker=shfmt --no-pad-file --command="shfmt --write --space-redirects --indent=4"
+    entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt --no-pad-file --command="shfmt --write --space-redirects --indent=4"
     language: python
     types_or: [markdown, rst]
 
   - id: mypy
     name: mypy
     stages: [pre-push]
-    entry: python -m mypy .
+    entry: uv run --extra=dev -m mypy .
     language: python
     types_or: [python, toml]
     pass_filenames: false
@@ -66,21 +66,21 @@ repos:
   - id: mypy-docs
     name: mypy-docs
     stages: [pre-push]
-    entry: doccmd --language=python --command="mypy"
+    entry: uv run --extra=dev doccmd --language=python --command="mypy"
     language: python
     types_or: [markdown, rst, python, toml]
 
   - id: check-manifest
     name: check-manifest
     stages: [pre-push]
-    entry: python -m check_manifest .
+    entry: uv run --extra=dev -m check_manifest .
     language: python
     pass_filenames: false
 
   - id: pyright
     name: pyright
     stages: [pre-push]
-    entry: python -m pyright .
+    entry: uv run --extra=dev -m pyright .
     language: python
     types_or: [python, toml]
     pass_filenames: false
@@ -88,88 +88,88 @@ repos:
   - id: pyright-docs
     name: pyright-docs
     stages: [pre-push]
-    entry: doccmd --language=python --command="pyright"
+    entry: uv run --extra=dev doccmd --language=python --command="pyright"
     language: python
     types_or: [markdown, rst, python, toml]
 
   - id: vulture
     name: vulture
-    entry: python -m vulture .
+    entry: uv run --extra=dev -m vulture .
     language: python
     types_or: [python]
     pass_filenames: false
 
   - id: vulture-docs
     name: vulture docs
-    entry: doccmd --language=python --command="vulture"
+    entry: uv run --extra=dev doccmd --language=python --command="vulture"
     language: python
     types_or: [markdown, rst]
 
   - id: pyroma
     name: pyroma
-    entry: python -m pyroma --min 10 .
+    entry: uv run --extra=dev -m pyroma --min 10 .
     language: python
     pass_filenames: false
     types_or: [toml]
 
   - id: deptry
     name: deptry
-    entry: python -m deptry src/
+    entry: uv run --extra=dev -m deptry src/
     language: python
     pass_filenames: false
 
   - id: pylint
     name: pylint
-    entry: python -m pylint src/ tests/
+    entry: uv run --extra=dev -m pylint src/ tests/
     language: python
     stages: [manual]
     pass_filenames: false
 
   - id: ruff-check-fix
     name: Ruff check fix
-    entry: python -m ruff check --fix
+    entry: uv run --extra=dev -m ruff check --fix
     language: python
     types_or: [python]
 
   - id: ruff-check-fix-docs
     name: Ruff check fix docs
-    entry: doccmd --language=python --command="ruff check --fix"
+    entry: uv run --extra=dev doccmd --language=python --command="ruff check --fix"
     language: python
     types_or: [markdown, rst]
 
   - id: ruff-format-fix
     name: Ruff format
-    entry: python -m ruff format
+    entry: uv run --extra=dev -m ruff format
     language: python
     types_or: [python]
 
   - id: ruff-format-fix-docs
     name: Ruff format docs
-    entry: doccmd --language=python --no-pad-file --command="ruff format"
+    entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff format"
     language: python
     types_or: [markdown, rst]
 
   - id: doc8
     name: doc8
-    entry: python -m doc8
+    entry: uv run --extra=dev -m doc8
     language: python
     types_or: [rst]
 
   - id: interrogate
     name: interrogate
-    entry: python -m interrogate
+    entry: uv run --extra=dev -m interrogate
     language: python
     types_or: [python]
 
   - id: interrogate-docs
     name: interrogate docs
-    entry: doccmd --language=python --command="interrogate"
+    entry: uv run --extra=dev doccmd --language=python --command="interrogate"
     language: python
     types_or: [markdown, rst]
 
   - id: pyproject-fmt-fix
     name: pyproject-fmt
-    entry: pyproject-fmt
+    entry: uv run --extra=dev pyproject-fmt
     language: python
     types_or: [toml]
     files: pyproject.toml
