--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Install uv
         uses: astral-sh/setup-uv@v3
+
+      - name: "Create requirements file"
+        run:
           uv pip compile --resolution=${{ matrix.uv-resolution }} --no-deps pyproject.toml > resolved-requirements.txt
+
+      - name: "Install dependencies"
+        run:
           uv pip install --system --requirement resolved-requirements.txt
 
       - name: "Lint"
