--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,23 +28,17 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
 
-      - name: "Create requirements file"
-        run:
-          uv pip compile --resolution=${{ matrix.uv-resolution }} --no-deps pyproject.toml > resolved-requirements.txt
-
-      - name: "Install dependencies"
-        run:
-          uv pip install --system --requirement resolved-requirements.txt
-
       - name: "Lint"
         run: |
-          uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage precommit --verbose
-          uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage pre-push --verbose
-          uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage manual --verbose
+          uv run --all-extras --python=${{ matrix.python-version }} --resolution=${{ matrix.uv-resolution }} pre-commit run --all-files --hook-stage precommit --verbose
+          uv run --all-extras --python=${{ matrix.python-version }} --resolution=${{ matrix.uv-resolution }} pre-commit run --all-files --hook-stage pre-push --verbose
+          uv run --all-extras --python=${{ matrix.python-version }} --resolution=${{ matrix.uv-resolution }} pre-commit run --all-files --hook-stage manual --verbose
 
       - name: "Build sample"
         run: |
           make build-sample
+        env:
+          UV_RESOLUTION: foobar
 
       - name: "Build sample parallel"
         run: |
@@ -52,7 +46,7 @@ jobs:
 
       - name: "Run tests"
         run: |
-          uv run --all-extras --python=${{ matrix.python-version }} pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
+          uv run --all-extras --python=${{ matrix.python-version }} --resolution=${{ matrix.uv-resolution }} pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests . --cov-report=xml
 
       - name: "Upload coverage to Codecov"
         uses: "codecov/codecov-action@v4"
