--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ optional-dependencies.dev = [
     "sphinx[test]==8.0.2",
     "types-docutils==0.21.0.20241005",
     "vulture==2.13",
-    "docformatter==1.7.5",
+    "docformatter --in-place==1.7.5",
 ]
 optional-dependencies.release = [ "check-wheel-contents==0.6.0" ]
 urls.Source = "https://github.com/adamtheturtle/sphinx-substitution-extensions"
@@ -232,6 +232,9 @@ spelling-private-dict-file = 'spelling_private_dict.txt'
 # Tells whether to store unknown words to indicated private dictionary in
 # --spelling-private-dict-file option instead of raising a message.
 spelling-store-unknown-words = 'no'
+
+[tool.docformatter]
+make-summary-multi-line = true
 
 [tool.check-manifest]
 
