--- a/pyproject.toml
+++ b/pyproject.toml
@@ -239,6 +239,8 @@ make-summary-multi-line = true
 [tool.check-manifest]
 
 ignore = [
+    ".checkmake-config.ini",
+    ".yamlfmt",
     "*.enc",
     ".pre-commit-config.yaml",
     "readthedocs.yaml",
