--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 default_install_hook_types: [pre-commit, pre-push, commit-msg]
+
 repos:
   - repo: meta
     hooks:
@@ -39,42 +40,44 @@ repos:
         language: python
         pass_filenames: false
         types_or: [yaml]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: docformatter
         name: docformatter
         entry: uv run --extra=dev -m docformatter --in-place
         language: python
         types_or: [python]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: shellcheck
         name: shellcheck
         entry: uv run --extra=dev shellcheck --shell=bash --exclude=SC1017
         language: python
         types_or: [shell]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: shellcheck-docs
         name: shellcheck-docs
-        entry: uv run --extra=dev doccmd --language=shell --language=console --command="shellcheck --shell=bash --exclude=SC1017"
+        entry: uv run --extra=dev doccmd --language=shell --language=console --command="shellcheck
+          --shell=bash --exclude=SC1017"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: shfmt
         name: shfmt
         entry: shfmt --write --space-redirects --indent=4
         language: python
         types_or: [shell]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: shfmt-docs
         name: shfmt-docs
-        entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt --no-pad-file --command="shfmt --write --space-redirects --indent=4"
+        entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
+          --no-pad-file --command="shfmt --write --space-redirects --indent=4"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: mypy
         name: mypy
@@ -83,7 +86,7 @@ repos:
         language: python
         types_or: [python, toml]
         pass_filenames: false
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: mypy-docs
         name: mypy-docs
@@ -98,7 +101,7 @@ repos:
         entry: uv run --extra=dev -m check_manifest .
         language: python
         pass_filenames: false
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: pyright
         name: pyright
@@ -107,7 +110,7 @@ repos:
         language: python
         types_or: [python, toml]
         pass_filenames: false
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: pyright-docs
         name: pyright-docs
@@ -122,14 +125,14 @@ repos:
         language: python
         types_or: [python]
         pass_filenames: false
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: vulture-docs
         name: vulture docs
         entry: uv run --extra=dev doccmd --language=python --command="vulture"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: pyroma
         name: pyroma
@@ -137,14 +140,14 @@ repos:
         language: python
         pass_filenames: false
         types_or: [toml]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: deptry
         name: deptry
         entry: uv run --extra=dev -m deptry src/
         language: python
         pass_filenames: false
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: pylint
         name: pylint
@@ -152,56 +155,57 @@ repos:
         language: python
         stages: [manual]
         pass_filenames: false
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: ruff-check-fix
         name: Ruff check fix
         entry: uv run --extra=dev -m ruff check --fix
         language: python
         types_or: [python]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: ruff-check-fix-docs
         name: Ruff check fix docs
         entry: uv run --extra=dev doccmd --language=python --command="ruff check --fix"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: ruff-format-fix
         name: Ruff format
         entry: uv run --extra=dev -m ruff format
         language: python
         types_or: [python]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
-        entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff format"
+        entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
+          format"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: doc8
         name: doc8
         entry: uv run --extra=dev -m doc8
         language: python
         types_or: [rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: interrogate
         name: interrogate
         entry: uv run --extra=dev -m interrogate
         language: python
         types_or: [python]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: interrogate-docs
         name: interrogate docs
         entry: uv run --extra=dev doccmd --language=python --command="interrogate"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: ["uv"]
+        additional_dependencies: [uv]
 
       - id: pyproject-fmt-fix
         name: pyproject-fmt
@@ -209,6 +213,14 @@ repos:
         language: python
         types_or: [toml]
         files: pyproject.toml
+
+      - id: yamlfix
+        name: pyproject-fmt
+        entry: uv run --extra=dev yamlfix
+        language: python
+        types_or: [yaml]
+        additional_dependencies: [uv]
+
 # We use system Python, with required dependencies specified in pyproject.toml.
 # We therefore cannot use those dependencies in pre-commit CI.
 ci:
