Move mypy file definitions to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -295,6 +295,8 @@ exclude_also = [
 [tool.mypy]
 
 strict = true
+files = [ "." ]
+exclude = [ "build" ]
 
 [tool.pyright]
 enableTypeIgnoreComments = false
