Fix the version in Sphinx to be the last released version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,13 @@ universal = true
 
 [tool.setuptools_scm]
 
+# This keeps the start of the version the same as the last release.
+# This is useful for our documentation to include e.g. binary links
+# to the latest released binary.
+#
+# Code to match this is in ``conf.py``.
+version_scheme = "post-release"
+
 [tool.ruff]
 target-version = "py310"
 
